# risk-var-dashboard

./: DEVELOPMENT_NOTES.md  README.md  download_data.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: sp500_historical.csv
tests/: __init__.py  test_basic.py
