[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "risk-var-dashboard"
version = "1.0.0"
description = "Risk Value at Risk Dashboard"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "streamlit>=1.28",
    "plotly>=5.15",
    "yfinance>=0.2",
    "pytest>=7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
